0.3.0 构建修复 - 最小化可用版本