@@ -8,15 +8,67 @@ Minecraft Java 版 1.21.1 NeoForge 极致性能优化客户端模组
 |--------|-----|
 | **Mod ID** | `criticalphoton` |
 | **Group ID** | `com.dlzstudio.criticalphoton` |
-| **版本** | `0.2.2` |
+| **版本** | `0.3.0` |
 | **Minecraft** | 1.21.1 |
 | **NeoForge** | 21.1.166+ |
 
-## 0.2.2 更新内容
+## 0.3.0 更新内容 - 极致性能版
 
-### 配置优化
-- 配置文件路径更改为 `config/DLZstudio/criticalphoton-client.toml`
-- 支持自定义配置目录结构
+### ⚡ 核心架构重构
+
+#### UltraECS - 零对象开销实体系统
+- 使用 `Unsafe` 直接内存操作
+- 位图活跃实体追踪，O(1) 查找
+- 手动循环展开，SIMD 友好
+- **目标**: 10000 实体下 CPU 占用 < 20%
+
+#### ParallelRedstone - 并行红石计算
+- 位压缩信号存储 (4 位/方块)
+- 多线程并行更新
+- 延迟传播队列
+- **目标**: 5000 高频红石下 CPU 占用 < 10%
+
+#### ZeroOverheadRenderer - 零开销渲染器
+- 直接内存顶点缓冲
+- 批处理渲染 (减少状态切换)
+- LOD 顶点数动态调整
+- **目标**: 渲染调用减少 80%
+
+#### UltraAsyncTickSystem - 完全异步 Tick
+- 主线程 Tick 时间 < 5ms
+- 工作线程并行实体 Tick
+- 异步 IO 和计算任务
+- **目标**: 20 TPS 稳定运行
+
+#### ZeroGCAllocator - 零 GC 分配器
+- 对象池重用
+- 直接内存分配
+- 无 GC 压力
+- **目标**: GC 频率降低 95%
+
+#### VectorMath - SIMD 向量运算
+- 手动循环展开 (4x)
+- 快速三角函数查表
+- 快速倒数平方根 (Quake III 算法)
+- **目标**: 向量运算性能提升 400%
+
+### Mixin 注入优化
+
+| Mixin | 功能 |
+|-------|------|
+| UltraECSMixin | 实体管理重定向到 ECS |
+| ParallelRedstoneMixin | 红石更新重定向到并行系统 |
+| UltraTickMixin | Tick 处理重定向到异步系统 |
+
+### 性能对比 (4G 内存 + 集显 + i5)
+
+| 场景 | 原版 | 0.2.x | 0.3.0 目标 |
+|------|------|-------|-----------|
+| 10000 实体 | 3-8 FPS | 8-15 FPS | **100-120 FPS** |
+| 5000 红石 | 2-5 FPS | 6-12 FPS | **100-120 FPS** |
+| 混合负载 | 1-3 FPS | 5-8 FPS | **80-100 FPS** |
+| 内存占用 | 4GB+ | 3.5GB | **2.5GB** |
+| GC 频率 | 频繁 | 中等 | **几乎无** |
 
 ## 0.2.x 更新内容
 
@@ -57,33 +109,13 @@ Minecraft Java 版 1.21.1 NeoForge 极致性能优化客户端模组
 - TickOptimizerMixin - Tick 时间切片
 - NetworkOptimizerMixin - 网络内存池
 
-## 特性
-
-### 🎯 核心优化
-
-- **视觉无损的智能剔除系统** - 根治模组实体因方块剔除导致的"视觉割裂"问题
-- **零开销的异步渲染架构** - 三阶段渲染流水线，多线程并行处理
-- **连续 LOD 过渡系统** - 6 级细节层次，屏幕空间误差控制
-- **实时性能监控与调节** - 毫秒级监控，动态负载平衡
-
-### 🔧 性能提升
-
-| 优化项 | 提升幅度 |
-|--------|---------|
-| 区块加载 | +50-100% |
-| 实体查询 | +200-500% |
-| 粒子系统 | +30-50% |
-| 内存占用 | -20-40% |
-| GC 频率 | -50-70% |
-| Tick 延迟 | -30-60% |
-
 ## 安装
 
 ### 前置要求
 
 - Minecraft 1.21.1
 - NeoForge 21.1.166+
-- Java 21
+- Java 21 (必须，0.3.0 使用 Unsafe API)
 
 ### 安装步骤
 
@@ -126,10 +158,17 @@ CriticalPhotonApi.registerVisualAnchor(entity, List.of(anchorPos),
 gradlew build
 ```
 
+## 注意事项
+
+⚠️ **0.3.0 使用 `sun.misc.Unsafe`，这是内部 API**
+- 需要 JVM 参数：`--add-opens java.base/sun.misc=ALL-UNNAMED`
+- 在某些 JVM 上可能需要额外配置
+- 生产环境使用请谨慎测试
+
 ## 许可证
 
 MIT License
 
 ---
 
-**临界光子 v0.2.0** - 性能压榨到极致
+**临界光子 v0.3.0** - 性能压榨到极致，目标 100+ FPS
